.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity_Attempt__c.object
<CustomObject>
    <description>Is created when there is an outcome is selected for a service activity that results in a reallocation.</description>
    <fields>
        <fullName>Incap311__Activity_Outcome_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The response chosen during this attempt</description>
        <label>Activity Outcome Response</label>
        <referenceTo>Incap311__Activity_Outcome_Response__c</referenceTo>
        <relationshipLabel>Activity Attempts</relationshipLabel>
        <relationshipName>Activity_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Outcome for this attempt</description>
        <label>Activity Outcome</label>
        <referenceTo>Incap311__Activity_Outcome__c</referenceTo>
        <relationshipLabel>Activity Attempts</relationshipLabel>
        <relationshipName>Activity_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Additional_Comments__c</fullName>
        <description>Any extra comments about this attempt</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Attempt_Date__c</fullName>
        <description>Date time in which the attempt occurred</description>
        <label>Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Attempt__c</fullName>
        <description>The number of the attempt this is for this activity. 1,2,3</description>
        <label>Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__External_Comments__c</fullName>
        <description>External visible comments about the attempt</description>
        <label>External Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Internal_Comments__c</fullName>
        <description>Internal(private) comments for this attempt</description>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Activity__c</fullName>
        <description>The service activity for which this attempt was made.</description>
        <label>Service Activity</label>
        <referenceTo>Incap311__Service_Activity__c</referenceTo>
        <relationshipLabel>Activity Attempts</relationshipLabel>
        <relationshipName>Activity_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Activity Attempt</label>
    <nameField>
        <label>Activity Attempt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>